fix truncate?

--- a/static/css/modesta.css
+++ b/static/css/modesta.css
@@ -3273,7 +3273,7 @@ form {
     }
 
     .me .undertitle {
-        font-size: 1.75rem;
+        font-size: 1rem;
         text-align: center
     }
 
